<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.example.lightweight.ui.workouttracking.home.HomeFragment"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_homeFragment_to_selectCategoryFragment"
            app:destination="@id/selectCategoryFragment" />
        <action
            android:id="@+id/action_homeFragment_to_calendarFragment"
            app:destination="@id/calendarFragment" />
        <argument
            android:name="selectedDate"
            app:argType="string"
            app:nullable="true"
            android:defaultValue="today" />
        <action
            android:id="@+id/action_homeFragment_to_setTrackerActivity"
            app:destination="@id/setTrackerActivity" />
    </fragment>
    <fragment
        android:id="@+id/selectCategoryFragment"
        android:name="com.example.lightweight.ui.workouttracking.selectcategory.SelectCategoryFragment"
        tools:layout="@layout/fragment_select_category">
        <action
            android:id="@+id/action_selectCategoryFragment_to_selectExerciseFragment"
            app:destination="@id/selectExerciseFragment" />
        <argument
            android:name="selectedDate"
            app:argType="string" />
    </fragment>
    <fragment
        android:id="@+id/selectTrainingCycleFragment"
        android:name="com.example.lightweight.ui.cycleplanning.selecttrainingcycle.SelectTrainingCycleFragment"
        tools:layout="@layout/fragment_select_training_cycle" >
        <action
            android:id="@+id/action_selectTrainingCycleFragment_to_viewTrainingCycleFragment"
            app:destination="@id/viewTrainingCycleFragment" />
    </fragment>
    <fragment
        android:id="@+id/selectExerciseFragment"
        android:name="com.example.lightweight.ui.workouttracking.selectexercise.SelectExerciseFragment"
        tools:layout="@layout/fragment_select_exercise">
        <argument
            android:name="categoryID"
            app:argType="integer" />
        <action
            android:id="@+id/action_selectExerciseFragment_to_setTrackerActivity"
            app:destination="@id/setTrackerActivity" />
        <argument
            android:name="selectedDate"
            app:argType="string" />
    </fragment>
    <activity
        android:id="@+id/setTrackerActivity"
        android:name="com.example.lightweight.ui.workouttracking.settracker.SetTrackerActivity"
        tools:layout="@layout/activity_set_tracker">
        <argument
            android:name="exerciseID"
            app:argType="integer" />
        <argument
            android:name="selectedDate"
            app:argType="string" />
    </activity>
    <fragment
        android:id="@+id/calendarFragment"
        android:name="com.example.lightweight.ui.workouttracking.calendar.CalendarFragment"
        tools:layout="@layout/fragment_calendar" >
        <argument android:name="selectedDate"
            app:argType="string"
            app:nullable="true" />
        <action
            android:id="@+id/action_calendarFragment_to_homeFragment"
            app:destination="@id/homeFragment"
            app:popUpTo="@id/homeFragment"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/viewTrainingCycleFragment"
        android:name="com.example.lightweight.ui.cycleplanning.viewtrainingcycle.ViewTrainingCycleFragment"
        tools:layout="@layout/fragment_view_training_cycle">
        <argument
            android:name="cycleID"
            app:argType="integer" />
    </fragment>
    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.example.lightweight.ui.settings.SettingsFragment" />
</navigation>