<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraint_layout_select_exercise"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    tools:context=".ui.workouttracking.selectexercise.SelectExerciseFragment">

    <androidx.appcompat.widget.SearchView
...

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view_exercises"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:contentDescription="List of exercises"
        app:layout_constraintBottom_toTopOf="@id/fab_add_exercise"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/search_view_exercises" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
...
